manifests/envoy/config-map.yml
apiVersion: v1
kind: ConfigMap
metadata:
  name: envoy-config
data:
  # contents of envoy.yaml.txt
  envoy.yaml: |-
    static_resources:
      listeners:
        - name: grpc_listener
          address:
            socket_address:
              address: 0.0.0.0
              port_value: 8080
          filter_chains:
            - filters:
                - name: http_connection_manager
                  typed_config:
                    '@type': type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                    http_filters:
                      - name: envoy.filters.http.config
                        typed_config:
                          '@type': type.googleapis.com/envoy.extensions.filters.http.grpc_http1_bridge.v3.Config
                      - name: envoy.filters.http.filterconfig
                        typed_config:
                          '@type': type.googleapis.com/envoy.extensions.filters.http.connect_grpc_bridge.v3.FilterConfig
                      - name: envoy.filters.http.router
                        typed_config:
                          '@type': type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
                    route_config:
                      name: grpc_route
                      virtual_hosts:
                        - name: grpc_service
                          domains:
                            - '*'
                          routes:
                            - match:
                                prefix: '/'
                              route:
                                cluster: grpc_cluster
                    stat_prefix: ingress_grpc
      clusters:
        - name: grpc_cluster
          connect_timeout: 0.25s
          lb_policy: ROUND_ROBIN
          load_assignment:
            cluster_name: grpc_cluster
            endpoints:
              - lb_endpoints:
                  - endpoint:
                      address:
                        socket_address:
                          address: app-2-headless
                          port_value: 8080
          type: STRICT_DNS
          typed_extension_protocol_options:
            envoy.extensions.upstreams.http.v3.HttpProtocolOptions:
              '@type': type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions
              explicit_http_config:
                http2_protocol_options: {}
