manifests/envoy/service.yml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: envoy
    app.kubernetes.io/part-of: loadbalancing-test
  name: envoy
spec:
  ports:
    - name: tcp-8080
      port: 8080
      targetPort: 8080
  selector:
    app: envoy
    app.kubernetes.io/part-of: loadbalancing-test
    deployment: envoy
